--- a/ipod.css
+++ b/ipod.css
@@ -168,6 +168,35 @@ body {
 	background-color: #f3d7b5;
 	height: 45px;
 }
+
+.recipe_image {
+    margin: 1px;
+    height: 30%;
+    width: 97.8%;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 2px; 
+    border-color: #fff;
+}
+
+.rating_bar {
+    margin-top: 1px;
+	background-color: #fdffdf;
+    color:#266ee2;
+    border-top: solid;
+    border-bottom: solid;
+    border-width: 2px;
+    width: 100%;
+    border-color: #fff;
+    text-align: center;
+    font-size: 11;
+}
+
+
+.rating_bar .your_rating{
+    float:center;
+    padding: 1px;
+}
 .material-icons.md-3 {
 
 	background-color: #fdffdf;
@@ -184,11 +213,10 @@ body {
 }
 
 .head_recipes {
-	float: center;
-	position: absolute;
+    float: left;
 	font-size: 20px;
-	margin-left: 8%;
-	margin-top: 0.5%;
+	margin-left: 2%;
+	margin-top: 2.5%;
 	text-align: center;
 	font-family: sans-serif;
 	color: #fdffdf;
@@ -205,12 +233,12 @@ body {
 		height: 90%;
 		padding-left: 10%;
 
-    width: 250px;
-    border-radius: 40px;
-    border: 2px solid #324B4E;
-    background: #F9F0DA;
-    transition: .3s linear;
-    float: right;
+        width: 250px;
+        border-radius: 40px;
+        border: 2px solid #324B4E;
+        background: #F9F0DA;
+        transition: .3s linear;
+        float: right;
 		margin-top: -1%;
 }
 .search-bar input:focus {
@@ -218,7 +246,7 @@ body {
 		outline: none;
 		height: 90%;
 		padding-left: 13px;
-    width: 250px;
+        width: 250px;
 }
 .search-bar button {
 		border: none;
@@ -227,9 +255,9 @@ body {
 		width: 17%;
 		cursor: pointer;
 		position: absolute;
-    background: none;
-    top: -2px;
-    right: 0;
+        background: none;
+        top: -2px;
+        right: 0;
 }
 .search-bar button:before{
   content: "\f002";
@@ -265,6 +293,10 @@ body {
 	height: 15%;
 	width: 90%;
 	border: 1px solid white;
+}
+
+.back_button {
+ float: left;
 }
 
 .search-result2 {
