--- a/ipod.css
+++ b/ipod.css
@@ -232,6 +232,7 @@ body {
 		outline: none;
 		height: 90%;
 		padding-left: 10%;
+        
 
         width: 250px;
         border-radius: 40px;
@@ -256,7 +257,7 @@ body {
 		cursor: pointer;
 		position: absolute;
         background: none;
-        top: -2px;
+        top: 2px;
         right: 0;
 }
 .search-bar button:before{
@@ -269,6 +270,7 @@ body {
 	width: 200px;
 	margin: 0 auto;
 	margin-left: 23%;
+    padding-bottom:2%;
 }
 
 .search-result {
@@ -278,9 +280,9 @@ body {
 .img {
 	float: left;
 	margin-left: 2%;
-	margin-top: 2%;
+	margin-top: 1.5%;
 	position: relative;
-	width: 25%;
+	
     height: 90%;
 }
 
