--- a/ipod.css
+++ b/ipod.css
@@ -169,26 +169,36 @@ body {
 	height: 45px;
 }
 
-.recipe_image {
-    margin: 1px;
-    height: 30%;
-    width: 97.8%;
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 2px; 
-    border-color: #fff;
+
+.recipe {
+    margin-top: 1px;
+	background-color: #fdffdf;
+    text-align: center;
+    color:#266ee2;
+    height: 20%;
+    width: 100%;       
 }
 
+.recipe .rec_title {
+    padding-top: 10%;
+    font-size: 20;
+}
+
+.recipe_image {
+    float: left;
+    margin: 1px;
+    height: 98%;
+    width: 40%;
+}
 .rating_bar {
+    width: 100%;
     margin-top: 1px;
 	background-color: #fdffdf;
     color:#266ee2;
     border-top: solid;
     border-bottom: solid;
     border-width: 2px;
-    width: 100%;
     border-color: #fff;
-    text-align: center;
     font-size: 11;
 }
 
@@ -197,6 +207,68 @@ body {
     float:center;
     padding: 1px;
 }
+
+
+.rating_bar .nutrition-facts{
+    font-size: 15px;
+    text-align: center;
+}
+
+.rating_bar .nutrition_base {
+    padding-left: 4px;
+    
+}
+
+
+.share{
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+    width: 100%;
+}
+
+
+.amount {
+    margin-top: 4px;
+    margin-bottom: 4px;
+}
+
+.review {
+    border-top: 2px solid;
+    margin: 4px;
+    padding-top: 14px;
+    padding-bottom: 4px;
+    padding-left: 4px;
+    padding-right: 4px;
+
+}
+
+.review_auth {
+ padding-bottom: 10px;
+}
+
+.review_posted{
+ padding-top: 10px;
+ 
+}
+.empty {
+   margin-left: 40%;
+   margin-bottom: 30px;
+}
+.daily_val {
+    margin-top: 4px;
+    margin-bottom: 4px;
+    font-weight: bold;
+    height: 10px;
+}
+
+ .nutrition_right {
+    float: right;
+    margin-left: 40%;
+    margin-right: 2%;
+
+}
+
 .material-icons.md-3 {
 
 	background-color: #fdffdf;
