--- a/ipod.css
+++ b/ipod.css
@@ -179,6 +179,17 @@ body {
     margin-top: 2%;
 }
 
+.home {
+    float:right;
+    margin-top: 2%;
+    margin-right: 2%;
+}
+
+.home i {
+    font-size: 30px;
+    color: #fdffdf;
+}
+
 .account i {
     font-size: 30px;
 	color: #fdffdf;
@@ -206,7 +217,7 @@ body {
 
 .recipe .recipe_image {
     float: left;
-    margin-top: 0.3%;
+    margin-top: 2%;
     height: 90%;
     margin-left: 2%;
     width: 40%;
@@ -328,9 +339,9 @@ body {
 
 .head_recipes {
     float: left;
-	font-size: 20px;
+	font-size: 16px;
 	margin-left: 2%;
-	margin-top: 2.5%;
+	margin-top: 3.5%;
 	text-align: center;
 	font-family: sans-serif;
 	color: #fdffdf;
