--- a/ipod.css
+++ b/ipod.css
@@ -222,6 +222,7 @@ body {
     margin-left: 2%;
     width: 40%;
 }
+
 .rating_bar {
     width: 100%;
     margin-top: 1px;
@@ -235,7 +236,23 @@ body {
 }
 
 
-.rating_bar .your_rating{
+.prep_bar {
+    width: 100%;
+    margin-top: 1px;
+	background-color: #fdffdf;
+    color:#266ee2;
+    border-top: solid;
+    border-bottom: solid;
+    border-width: 2px;
+    border-color: #fff;
+    font-size: 11;
+}
+
+.ingred_head{
+    text-align: center;   
+}
+
+.rating_bar.your_rating{
     float:center;
     padding: 1px;
 }
@@ -251,6 +268,14 @@ body {
 
 }
 
+#ingred {
+    text-align: center;
+}
+
+
+#inst {
+
+}
 
 .share{
     text-align: center;
