--- a/ipod.css
+++ b/ipod.css
@@ -327,24 +327,50 @@ body {
 }
 
 .cost_check {
-    display: none;
+    margin-left: 3px;
+    margin-top: 4px;
+    margin-bottom: 1px;
 }
 
 .ing_check {
     display: none;
 }
 
-.filter_item {
-    margin:4px;
-    border-top: 1px solid;
-    padding-bottom: 5px;
+.filter_lab {
+    float: left;
+    padding-top: 4px;
 }
 
-#filter_id {
+.filter_item {
+    margin-top:4px;
+    border-top: 1px solid;
+    padding-bottom: 2px;
+
+}
+
+.apply_filter_item {
+    margin-top: 6px;
+    margin-bottom: 4px;
+}
+
+.filter{
+    margin-left: 12px;
     text-align:center;
-    display:none;
+    display:block;
     background-color: #fdffdf;
     color: #c7b3e5;
+    margin-top: 15px;
+    margin-right: 15px;  
+}
+
+
+.filter .filter_head{
+    text-align: left;
+    margin-left: 4px;
+    margin-bottom: 3px;
+    margin-top: 4px;
+    padding-top: 3px;
+    cursor: pointer;
 }
 
 .material-icons.md-3 {
@@ -382,6 +408,21 @@ body {
 
 }
 
+#filter_item1{
+    display: none;
+    font-size: 12px;
+}
+
+
+#filter_item2{
+    display: none;
+    font-size: 12px;
+}
+
+
+#filter_item3{
+    display: none;
+}
 .search-bar input {
 		width: 100%;
 		border: none;
@@ -408,7 +449,7 @@ body {
 .search-bar button {
 		border: none;
 		outline: none;
-		height: 90%;
+		height: 65%;
 		width: 17%;
 		cursor: pointer;
 		position: absolute;
@@ -421,6 +462,7 @@ body {
   font-family: FontAwesome;
   color: #324b4e;
 }
+
 .form-search-bar {
 	position: relative;
 	width: 200px;
@@ -456,7 +498,7 @@ body {
 	padding: 0px;
 	margin: 10px;
 	margin-left: 12px;
-	margin-top: 10%;
+	margin-top: 5%;
 	height: 15%;
 	width: 90%;
 	border: 1px solid white;
